--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@ body {margin: 0;}
     position: relative;
     background: #ffe600;
     width: 100vw;
-    height: 10vw;
+    height: 8vw;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -36,49 +36,47 @@ body {margin: 0;}
 .menuInput{
     display: none;
 }
-
 .activeMenu {
     display: none;
 }
-
 .activeMenu > svg{
-    height: 90%;
-    width: 90%;
+    height: 70%;
+    width: 70%;
 }
 
 .closedMenu {
-    position: absolute;
-    top: 0;
-    left: 0;
+    display: none;
+    justify-self: end;
+}
+
+.closedMenu > svg{
+    height: 100%;
+    width: 100%;
+
 }
 
 .itemsMenu{
     display: none;
     position: absolute;
     padding: 15px;
-    margin: 0;
-    background: #ffe600;
+    margin: 5PX;
+    background: #aaa;
     list-style: none;
-    top: 0;
+    top: 100%;
     right: 0;
     bottom: 0;
-    width: 50%;
+    width: 70%;
+    height: 100vw;
+    justify-items: center;
+    border-radius: 15px;
 }
 
 .itemsMenu > li a {
     text-decoration: none;
     color: black;
+
 }
 
-.itemsMenu > p {
-    width: 100%;
-    border-bottom: black;
-    border-bottom-style: solid;
-    border-width: 1px;
-    padding-bottom: 15px;
-    margin: 0;
-    font-weight: bold;
-}
 /* ------------------------------------------------- */
 
 /* ------------------------------------------------- */
@@ -144,6 +142,10 @@ body {margin: 0;}
 
         .menuInput:checked ~ .itemsMenu {
             display: block;
+        }
+        .menuInput:checked ~ .closedMenu {
+            display: block;
+            width:10%;
         }
 
 
