--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -2,16 +2,33 @@
 
 .inputSearch{
     width: 100%;
+    height: 80%;
     background: #fff;
     border: none;
+    margin-left: 10px;
+    font-size: 100%;
 }
 
 .buttonSearch{
-    height: 100%;
+    height: 80%;
     background: #fff;
     border: none;
+    border-left: 1px solid #0002;
+    cursor: pointer;
 }
 
 .buttonSearch > img {
     height: 100%;
 }
+
+
+/* ------------------ PHONE SCREEN VIEW -------------------------*/
+    @media (max-width: 768px) {
+        .buttonSearch{
+            height: 50%;
+            width: 12%;
+            background: #fff;
+            border: none;
+            border-right: 1px solid #0002;
+        }
+    }
