--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,6 @@ body {margin: 0; padding: 0;}
     position: relative;
     background: #ffe600;
     width: 100vw;
-    height: 5vw;
     max-height: 100px;
     min-height: 87px;
     display: flex;
@@ -25,7 +24,7 @@ body {margin: 0; padding: 0;}
     grid-column-gap: 20px;
     grid-row-gap: 10px;
     grid-template-areas: 
-        "logo search advertising "
+        "logo search advertising"
         " location buttons login";
 }
 
@@ -85,7 +84,7 @@ body {margin: 0; padding: 0;}
     justify-self: start;
     place-items: center;
     width: 100%;
-    height: 90%;
+    height: 70%;
     display: flex;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     background: #fff;
@@ -124,6 +123,10 @@ body {margin: 0; padding: 0;}
 .location > a > span:first-of-type {
     color: #5f5f5f;
     font-size: 0.75rem;
+}
+
+.location > a > span:nth-child(3){
+    display: none;
 }
 
 .location > img {
@@ -226,14 +229,7 @@ body {margin: 0; padding: 0;}
 }
 
 /* Cart --------------------------------- */
-.cart{
-    display: block;
-}
-
-.cart > svg {
-    height: 100%;
-
-}
+.cart{}
 
 /* ------------------ PHONE SCREEN VIEW -------------------------*/
     @media (max-width: 768px) {
@@ -241,10 +237,34 @@ body {margin: 0; padding: 0;}
             background:#fff159;
             padding: 0;
         }
+
+        .container {
+            width: 98vw;
+            height: 100%;
+            grid-template-columns: 1fr 7fr 1fr 1fr;
+            grid-template-rows: 2fr 38px;
+            grid-column-gap: 10px;
+            grid-row-gap: 0;
+            grid-template-areas: 
+                "logo search menu cart"
+                "location location location location";
+        }
+
+        /* Diplay:None PHONE SCREEN VIEW -------------- */
+        .advertising, 
+        .button,
+        .login > ul,
+        .logo,
+        .itemsMenu {
+            display: none;
+        }
+
+        /* Menu PHONE SCREEN VIEW -------------- */
         .menu {
             display: flex;
             justify-content: center;
         }
+
         .activeMenu {
             display: flex;
             cursor: pointer;
@@ -257,30 +277,11 @@ body {margin: 0; padding: 0;}
             align-self: center;    
         }
 
-        .container {
-            width: 98vw;
-            height: 100%;
-            grid-template-columns: 1fr 7fr 1fr 1fr;
-            grid-template-rows: 2fr 1fr;
-            grid-column-gap: 10px;
-            grid-row-gap: 0;
-            grid-template-areas: 
-                "logo search menu cart"
-                "location location location location";
-        }
-
-        .advertising, 
-        .button,
-        .login,
-        .logo,
-        .itemsMenu {
-            display: none;
-        }
-
         .menuInput:checked ~ .itemsMenu {
             display: block;
         }
 
+        /* Logo PHONE SCREEN VIEW -------------- */
         .logoSmall {
             grid-area: logo;
             height: 50%;
@@ -288,6 +289,7 @@ body {margin: 0; padding: 0;}
             place-self: center;
         }
 
+        /* Search PHONE SCREEN VIEW -------------- */
         .search {
             flex-direction: row-reverse;
             height: 60%;
@@ -297,20 +299,53 @@ body {margin: 0; padding: 0;}
             color: #aaa;
         }
 
+        /* Location PHONE SCREEN VIEW -------------- */
         .location{
+            display: flex;
             grid-column-start: span 5;
-            border-top: 1px solid #0002;
-        }
-        .location > a{
-            flex-direction: row;
-            text-indent: 5px;
-            align-items: end;
+            border-top: 1px solid #0001;
+            height: 100%;
+            padding-left: 5px;
+            align-items: center;
         }
 
         .location > img {
             height: 1.3em;
         }
 
+        .location > a {
+            width: 100%;
+            flex-direction: row;
+            text-indent: 4px;
+        }
+
+        .location > span{
+            display: block;
+            height: 25px;
+            width: 25px;
+            padding-right: 10px;
+        }
+
+        .location > a > span:first-child{
+            font-size: 0.75rem;
+            color: #5f5f5f77;
+        }
+
+        .location > a > span:nth-child(2){
+            font-size: 0.75rem;
+            color: #5f5f5fAA;
+        }
+
+        /* Cart PHONE SCREEN VIEW -------------- */
+        .cart{
+            grid-area: cart;
+            place-content: center;
+
+        }
+        .cart > svg {
+            margin: 0 -20px;
+            height: 80%;
+        }
 }
 /* ------------------------------------------------- */
 
