--- a/src/components/DropdownCategories/DropdownCategories.module.css
+++ b/src/components/DropdownCategories/DropdownCategories.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     position: absolute;
     top: 100%;
     left: 190px;
@@ -7,27 +7,27 @@
     padding: 1.4rem 0 1.4rem 0;
     background: #333;
     border-radius: 5px;
-}
+} */
 
-.container > ul {
+.container {
     list-style: none;
     margin: 0;
     padding: 0;
     height: auto;
-
 }
 
-.container > ul > li {
+.container > li {
     width: auto;
-    height: 7vh;
+    height: auto;
+    padding: 10px 0;
     align-content: center;
 }
-.container > ul > li:hover {
+.container > li:hover {
     background: #3484fa;
-    cursor: po;
+    cursor: pointer;
 }
 
-.container > ul > li > a {
+.container > li > a {
     padding-left: 2rem;
     text-decoration: none;
     color: #fff;
