--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,18 +5,19 @@ body {margin: 0; padding: 0;}
     position: relative;
     background: #ffe600;
     width: 100vw;
+    height: 20vh;
     max-height: 100px;
     min-height: 87px;
     display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center;
-    padding: 0 0 0.75rem 0;
+    
 }
 
 .container{
     width: 95vw;
-    height: 100%;
+    height: 80%;
     display: grid;
     align-content: center;
     grid-template-columns: 1fr 5fr 3fr;
@@ -65,7 +66,7 @@ body {margin: 0; padding: 0;}
     justify-self: center;
     place-items: center;
     width: 95%;
-    height: 70%;
+    height: 100%;
     display: flex;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
     background: #fff;
@@ -130,9 +131,10 @@ body {margin: 0; padding: 0;}
     padding: 0;
     font-size: 0.85rem;
     font-family: "Proxima Nova",Arial,sans-serif,sans-serif;
-    overflow-x: auto;
-    overflow-y: hidden;
+    /* overflow-x: auto;
+    overflow-y: hidden; */
 }
+
 
 .button > li {
     align-self: end;
@@ -140,13 +142,37 @@ body {margin: 0; padding: 0;}
     margin: 0;
     padding: 0;
     min-width: max-content;
+    max-width: min-content;
     cursor: pointer;
 }
 
-.button > li:first-child {
+.buttonCategories{
     display: flex;
     position: relative;
 }
+
+.dropdownCategories{
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: -10px;
+    height: auto;
+    width: 21vw;
+    margin: 0.4rem 0 0 0 ;
+    padding: 1.4rem 0 1.4rem 0;
+    background: #333;
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.buttonCategories:hover .dropdownCategories {
+    opacity: 1;
+    transform: translateY(0);
+    visibility: visible;
+}
+
 
 .button > li:first-child > span {
     padding-left: 5px;
@@ -160,9 +186,10 @@ body {margin: 0; padding: 0;}
 }
 
 .button > li > a:hover {
-    text-decoration: none;
     color: #202020aa;
 }
+
+
 
 
 /* Button Mercado Play ------------------ */
@@ -369,6 +396,3 @@ body {margin: 0; padding: 0;}
 
 }
 /* ------------------------------------------------- */
-
-
-
