--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,22 +1,20 @@
 .container{
     font-family: "Proxima Nova",Arial,sans-serif,sans-serif;
-    height: fit-content;
+    height: 100%;
     width: fit-content;
-    padding: 0.5rem 0.3rem 1.5rem 0.3rem;
-
-    justify-self: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding: 0.5em 0.3em 1.5em 0.3em;
     border-bottom: 1px solid #aaa8;
 }
 
 .container > img {
     padding-bottom: 25px;
+    width: 100%;
 }
 
 .container > h3 {
     font-weight: lighter;
     color: #222;
+    font-size: 5vh;
 }
 
 .previousPrice{
@@ -27,7 +25,7 @@
 }
 
 .container > h4 {
-    font-size: 1.7rem;
+    font-size: 5vh;
     margin: 0;
     padding: 0;
 }
@@ -69,12 +67,12 @@
     color: #007595;
     cursor: pointer;
 }
-.remove {
+.emove {
     background: #ffc9c9;
     color: #c10007;
     cursor: pointer;
 }
-.removeNone {
+.emoveNone {
     background: #ebe6e7;
     color: #364153;
     cursor: not-allowed;
