--- a/src/components/SectionCard/SectionCard.module.css
+++ b/src/components/SectionCard/SectionCard.module.css
@@ -8,13 +8,41 @@
     flex-direction: column;
     border-radius: 10px;
     box-shadow: 1px 1px 10px #0002;
-    
+
 }
 
 .container > div {
     height: 100%;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr 1fr;
-    grid-column-gap: 10px;
+    max-height: 810px;
+    width: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    
 }
+
+
+/* ------------------ PHONE SCREEN VIEW -------------------------*/
+        /* @media (max-width: 1000px) {
+            .container > div {
+                grid-template-columns: repeat(4, 1fr);
+            }
+        }   
+
+        @media (max-width: 900px) {
+            .container > div {
+                grid-template-columns: repeat(3, 1fr);      
+            }
+        }   
+
+        @media (max-width: 700px) {
+            .container > div {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }   
+
+        @media (max-width: 500px) {
+            .container > div {
+                grid-template-columns: 1fr;
+            }
+        }    */
